2014-06-08  Glenn Morris  <rgm@gnu.org>

	* buffers.texi (Uniquify): Copyedits.
	* files.texi (Visiting): Update for uniquify changes.

	* dired.texi (Marks vs Flags):
	* rmail.texi (Rmail Scrolling): Markup fixes re SPC.

	* help.texi (Help, Misc Help): Copyedits.

	* screen.texi (Menu Bar): Copyedits.
	* msdog.texi (Windows Keyboard): F10 menus are now a general feature.

	* frames.texi (Frame Commands): Copyedits re M-F10, F11.
	* cmdargs.texi (Window Size X): Copyedits.

	* ack.texi (Acknowledgments):
	* emacs.texi (Acknowledgments): Updates.

2014-06-07  Glenn Morris  <rgm@gnu.org>

	* programs.texi (Prettifying Symbols): Remove node.
	(Misc for Programs): Mention more briefly here.
	* emacs.texi (Top): Update menu.

2014-06-05  Glenn Morris  <rgm@gnu.org>

	* package.texi (Package Menu, Package Installation):
	Mention signed packages.

2014-06-03  Glenn Morris  <rgm@gnu.org>

	* package.texi (Package Installation): Mention package-pinned-packages.

2014-06-02  Glenn Morris  <rgm@gnu.org>

	* misc.texi [iftex]: Update chapter summary.
	(Emulation): Remove ludicrously outdated claim.

2014-05-29  Glenn Morris  <rgm@gnu.org>

	* macos.texi (Mac / GNUstep Customization): Mention ns custom group.
	(Customization options specific to Mac OS / GNUstep): Remove section.

2014-05-28  Glenn Morris  <rgm@gnu.org>

	* macos.texi (Mac / GNUstep Customization): Mention some new features.

2014-05-27  Glenn Morris  <rgm@gnu.org>

	* abbrevs.texi (Expanding Abbrevs): Update re abbrev-expand-function.

2014-05-21  Eli Zaretskii  <eliz@gnu.org>

	* frames.texi (Fonts): Clarify which frames are affected by
	setting font from the menu and in default-frame-alist.
	(Bug#17532)

2014-05-12  Eli Zaretskii  <eliz@gnu.org>

	* mule.texi (Language Environments): Remove unused @anchor.
	(Bug#17479)

2014-05-02  Eli Zaretskii  <eliz@gnu.org>

	* trouble.texi (Lossage, DEL Does Not Delete, Stuck Recursive)
	(Screen Garbled, Text Garbled, After a Crash, Emergency Escape)